fix scroll-bar on mobile

--- a/src/sass/character-sheet.scss
+++ b/src/sass/character-sheet.scss
@@ -34,7 +34,7 @@ body:has(.dnd5e-character-sheet) {
 
     .callout-content {
       display: grid;
-      grid-template-columns: auto minmax(auto, 7rem);
+      grid-template-columns: auto minmax(auto, 7.5rem);
       gap: 0.1em 1em;
     }
 
@@ -59,6 +59,9 @@ body:has(.dnd5e-character-sheet) {
       display: grid;
       grid-template-columns: subgrid;
       margin-top: 1em;
+      :last-child {
+        justify-self: end
+      }
     }
   }
 
